@@ -1,3 +1,6 @@
+02 Nox, 2018
+fix: viewnfo breadcrumbs
+
 01 Nov, 2018
 fix: missing name in form new_topic.php
 fix: breadcrumbs when action is page
